@@ -48,4 +48,3 @@ examples/homepage-logo.pl
 examples/windy.pl
 examples/prep4gif.pl
 examples/ditherize.pl
-
